deprecated align attribute in logos fixed

--- a/style.css
+++ b/style.css
@@ -3,6 +3,14 @@
     --themetintlighter: #efe599;
 }
 
+#jslogo{
+    float: left;
+}
+
+#uulogo{
+    float: right;
+}
+
 /*Nav bar is a list of links, so make sure to only style nav-based links like this*/
 nav ul {
     width: 100%;
